--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,8 +30,8 @@
         <div class="main-wrapper">
             @RenderBody()
         </div>
-        <!-- <script src="~/js/vendor.js"></script>
-        <script src="~/js/app.js"></script>  -->
+        <script src="~/js/vendor.js"></script>
+        <script src="~/js/app.js"></script>  
         <script src="~/js/build.js" asp-append-version="true"></script>
     </body>
 </html>
