--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel="stylesheet" href="~/css/vendor.css">
         <link rel="stylesheet" href="~/css/app-green.css">
+        <link rel="stylesheet" href="~/lib/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
         <!-- Theme initialization -->
         <!-- <script>
             var themeSettings = (localStorage.getItem('themeSettings')) ? JSON.parse(localStorage.getItem('themeSettings')) :
